--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 <input type="range" min="0" max="1" id="mainBusA">
 <input type="range" min="0" max="1" id="mainBusB">
+<br>
+<input type="button" id="powerOn" value="Power">
 <input>
 </body>
 </html>
